refactor on ngx_http_push_stream_output_filter to deal with NGX_AGAIN while writing the response

--- a/misc/nginx.conf
+++ b/misc/nginx.conf
@@ -7,15 +7,20 @@ daemon              off;
 worker_rlimit_core  2500M;
 working_directory /tmp;
 debug_points abort;
+env MOCKEAGAIN_VERBOSE;
+env MOCKEAGAIN_WRITE_TIMEOUT_PATTERN;
+#env MOCKEAGAIN;
+env LD_PRELOAD;
 
 worker_processes    2;
 
 events {
     worker_connections  1024;
-    use                 epoll;
+    use                 poll;
 }
 
 http {
+    postpone_output 1; # only postpone a single byte, default 1460 bytes
     access_log      logs/nginx-http_access.log;
 
     push_stream_shared_memory_size                100m;
@@ -25,7 +30,7 @@ http {
     # message ttl
     push_stream_message_ttl                       5m;
     # ping frequency
-    push_stream_ping_message_interval             1s;
+    push_stream_ping_message_interval             30s;
     # connection ttl to enable recycle
     push_stream_subscriber_connection_ttl         15m;
     # connection ttl for long polling
