--- a/misc/Gemfile
+++ b/misc/Gemfile
@@ -15,6 +15,7 @@ group :test do
   gem 'json', '~> 1.8.1'
   gem 'thin', '~> 1.5.1'
   gem 'net-http-persistent', '~> 2.9', :require => 'net/http/persistent'
+  gem 'websocket-eventmachine-client'
 
   gem 'byebug', '~> 1.3.1'
 end
